--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 local_scheme = "node-and-date"
-fallback_version = "9999.9999.9999"
+fallback_version = "999.999.999+unknown"
 
 [tool.coverage.run]
 omit = ["*/tests/*", "*pygmt/__init__.py"]
