Update GMT Dev Tests workflow to test on macOS-12 and ubuntu-22.04 (#1918)
* Update GMT Dev Tests workflow to test on macOS-12
* Update GMT Dev Tests workflow to test on ubuntu-22.04
* Two jobs are ran on Ubuntu for draft PRs, not one

Co-authored-by: Dongdong Tian <seisman.info@gmail.com>

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.10']
-        os: [ubuntu-latest, macOS-11.0, windows-2022]
+        os: [ubuntu-22.04, macOS-12, windows-2022]
         gmt_git_ref: [master]
     timeout-minutes: 30
     defaults:
