Change config dashes to underscores

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ omit = ["*/tests/*", "*pygmt/__init__.py"]
 [tool.flakeheaven]
 ignore = ["E203", "E266", "E501", "W503", "F401", "E741"]
 max_line_length = 88
-max-doc-length = 79
+max_doc_length = 79
 show_source = true
 
 [tool.pytest.ini_options]
