Need to specificy the python version in the setup-python action

--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -22,6 +22,8 @@ jobs:
 
       # Setup Python environment
       - uses: actions/setup-python@v4.0.0
+        with:
+          python-version: '3.10'
 
       # Install formatting tools
       - name: Install formatting tools
