--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -45,6 +45,7 @@ jobs:
           --exclude "^https://hackmd.io/@pygmt"
           --exclude "^https://doi.org"
           --exclude "^https://www.researchgate.net/project/"
+          --exclude "^https://test.pypi.org/simple/"
           --verbose
           "repository/**/*.rst"
           "repository/**/*.md"
