Migrate Continuous Documentation from Vercel to Readthedocs (#1859)
* Remove vercel configuration files
* Setup readthedocs configuration file
* Run pip install . in the readthedocs build environment
* Remove vercel configurations and add readthedocs configurations in MANIFEST.in
* Update doc/maintenance.md to trigger builds in PR
* Set canonical URL by setting html_baseurl
* Update contributing and maintenance guides
* Customize the pre_build step to generate API stub files
* Only install packages required for building docs
* Move the docs environment file to the ci directory

Co-authored-by: Dongdong Tian <seisman.info@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,13 @@
 prune .dvc
 prune .github*
+prune ci
 prune doc*
 prune examples*
 exclude .dvcignore
 exclude .gitignore
+exclude .readthedocs.yaml
 exclude AUTHORSHIP.md
 exclude CONTRIBUTING.md
 exclude Makefile
 exclude environment.yml
-exclude package.json
 exclude requirements.txt
-exclude vercel.json
