Add package data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,9 @@ include-package-data = true
 include = ["pygmt*"]
 exclude = ["doc"]
 
+[tool.setuptools.package-data]
+tests = ["data/*", "baseline/*"]
+
 [tool.setuptools_scm]
 local_scheme = "node-and-date"
 fallback_version = "999.999.999+unknown"
