Pin minimum flakeheaven version to 3.0.0
Includes a fix that forwards max_line_length to pylint plugin.

Co-Authored-By: Dongdong Tian <seisman.info@gmail.com>

--- a/environment.yml
+++ b/environment.yml
@@ -23,7 +23,7 @@ dependencies:
     - black
     - blackdoc
     - docformatter
-    - flakeheaven
+    - flakeheaven>=3
     - isort>=5
     - pylint
     # Dev dependencies (unit testing)
