Enforce pycodestyle E266 Too many leading '#' for block comment
Removed some double ## in colorbar gallery example to allow this check to pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ max_doc_length = 79
 show_source = true
 
 [tool.flakeheaven.plugins]
-pycodestyle = ["+*", "-E266", "-E501", "-W503"]
+pycodestyle = ["+*", "-E501", "-W503"]
 pyflakes = ["+*", "-F401"]
 
 [tool.pytest.ini_options]
