Replace flake8 with flakeheaven (#1847)
* Replace flake8 with flakeheaven
* Install flakeheaven from conda-forge instead of pypi
* Invalidate flakeheaven cache
* Ignore pycodestyle and pyflakes errors in flakeheaven plugins section
* Pin minimum flakeheaven version to 3.0.0
* Enforce pycodestyle E266 Too many leading '#' for block comment
* Ignore pyflakes F401 'Module imported but unused' for __init__.py only

Co-Authored-By: Dongdong Tian <seisman.info@gmail.com>

--- a/.github/workflows/style_checks.yaml
+++ b/.github/workflows/style_checks.yaml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Install packages
         run: |
-          pip install black blackdoc docformatter flake8 pylint isort
+          pip install black blackdoc docformatter flakeheaven pylint isort
           sudo apt-get install dos2unix
 
-      - name: Formatting check (black, blackdoc, docformatter, flake8 and isort)
+      - name: Formatting check (black, blackdoc, docformatter, flakeheaven and isort)
         run: make check
 
       - name: Linting (pylint)
