--- a/.github/workflows/format-command.yml
+++ b/.github/workflows/format-command.yml
@@ -28,7 +28,7 @@ jobs:
       # Install formatting tools
       - name: Install formatting tools
         run: |
-          pip install black blackdoc docformatter flake8 isort
+          pip install black blackdoc docformatter flakeheaven isort
           sudo apt-get install dos2unix
 
       # Run "make format" and commit the change to the PR branch
