--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -33,7 +33,7 @@ jobs:
         exclude:
           - os: macOS-latest
             isDraft: true
-          - os: windows-latest
+          - os: ubuntu-latest
             isDraft: true
     timeout-minutes: 30
     defaults:
