Use verbose flag for sphinx-build

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -33,7 +33,7 @@ html: api
 	@echo "Building HTML files."
 	@echo
 	# Set PYGMT_USE_EXTERNAL_DISPLAY to "false" to disable external display
-	PYGMT_USE_EXTERNAL_DISPLAY="false" $(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	PYGMT_USE_EXTERNAL_DISPLAY="false" $(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html -v
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
