Add optional dependencies to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ dependencies = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+all = [
+    "geopandas"
+]
+
 [project.urls]
 homepage = "https://www.pygmt.org"
 documentation = "https://www.pygmt.org"
