Also add ipython as an optional dependency
Co-authored-by: Wei Ji <23487320+weiji14@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 all = [
-    "geopandas"
+    "geopandas",
+    "ipython"
 ]
 
 [project.urls]
