Add optional dependencies to pyproject.toml (#2069)
Co-authored-by: Wei Ji <23487320+weiji14@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,12 @@ dependencies = [
 ]
 dynamic = ["version"]
 
+[project.optional-dependencies]
+all = [
+    "geopandas",
+    "ipython"
+]
+
 [project.urls]
 homepage = "https://www.pygmt.org"
 documentation = "https://www.pygmt.org"
