--- a/.github/workflows/ci_tests_backward.yaml
+++ b/.github/workflows/ci_tests_backward.yaml
@@ -93,7 +93,7 @@ jobs:
       # Pull baseline image data from dvc remote (DAGsHub)
       - name: Pull baseline image data from dvc remote
         run: |
-          dvc pull --verbose
+          dvc pull pygmt/tests/baseline/test_image.png --verbose
           ls -lhR pygmt/tests/baseline/
 
       # Install the package that we want to test
