Run the CI job on Tuesday

--- a/.github/workflows/ci_tests_backward.yaml
+++ b/.github/workflows/ci_tests_backward.yaml
@@ -14,9 +14,9 @@ on:
       - 'README.rst'
       - 'LICENSE.txt'
       - '.gitignore'
-  # Schedule tests on Monday/Wednesday/Friday
+  # Schedule tests on Tuesday
   schedule:
-    - cron: '0 0 * * 1,3,5'
+    - cron: '0 0 * * 2'
 
 jobs:
   test:
