Change Backward to Legacy

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -1,6 +1,6 @@
 # This workflow installs PyGMT and runs tests with old GMT versions
 
-name: GMT Backward Tests
+name: GMT Legacy Tests
 
 on:
   # push:
