Instruct to provide OS, installation method and error message
Co-authored-by: Max Jones <meghanj@alum.mit.edu>

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -40,7 +40,9 @@ body:
   - type: textarea
     attributes:
       label: "System information"
-      description: "Please paste the output of `python -c \"import pygmt; pygmt.show_versions()\"`"
+      description: |
+        Please paste the output of `python -c \"import pygmt; pygmt.show_versions()\"`
+        If this command is not successful, please describe your operating system, how you installed PyGMT, how you installed GMT, and paste the full error message.
       placeholder: "PASTE THE OUTPUT HERE"
       render: bash
     validations:
