--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Install dependencies
         run: |
           mamba install gmt=${{ matrix.gmt_version }} numpy \
-                        pandas xarray netCDF4 packaging geopandas \
+                        pandas xarray netCDF4 packaging contextily geopandas \
                         build dvc make pytest>=6.0 \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
 
