Add sphinx-paramlinks to environment.yml and docs dependencies
[Sphinx Paramlinks](https://github.com/sqlalchemyorg/sphinx-paramlinks) adds HTML links and targets to the :param: tags within Sphinx Python docstrings.

--- a/.github/workflows/ci_docs.yml
+++ b/.github/workflows/ci_docs.yml
@@ -72,6 +72,7 @@ jobs:
           mamba install gmt=6.4.0 numpy pandas xarray netCDF4 packaging \
                         build ipython make myst-parser geopandas \
                         sphinx sphinx-copybutton sphinx-design sphinx-gallery sphinx_rtd_theme
+          pip install sphinx-paramlinks
 
       # Show installed pkg information for postmortem diagnostic
       - name: List installed packages
