Skip post setup mambaforge in Continuous Integration
Reduce time spent by `conda-incubator/setup-miniconda` on the 'Post Setup Mambaforge' step, especially on Windows which could take ~4-6 minutes.

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -58,6 +58,7 @@ jobs:
           miniforge-version: latest
           miniforge-variant: Mambaforge
           mamba-version: "*"
+          run-post: false
           use-mamba: true
 
       # Install GMT and other required dependencies from conda-forge
