Install ipython in GMT Legacy Tests CI environment
To fix errors like `pygmt.exceptions.GMTError: Notebook display is selected, but IPython is not available. Make sure you have IPython installed, or run the script in a Jupyter notebook`.

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -65,7 +65,8 @@ jobs:
       - name: Install dependencies
         run: |
           mamba install gmt=${{ matrix.gmt_version }} numpy \
-                        pandas xarray netCDF4 packaging geopandas \
+                        pandas xarray netCDF4 packaging \
+                        geopandas ipython \
                         build dvc make 'pytest>=6.0' \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
 
