Revert "Install ipython in GMT Legacy Tests CI environment"
This reverts commit ae99d158b9a361682f80da197cd10633791b6f27.

--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -65,8 +65,7 @@ jobs:
       - name: Install dependencies
         run: |
           mamba install gmt=${{ matrix.gmt_version }} numpy \
-                        pandas xarray netCDF4 packaging \
-                        geopandas ipython \
+                        pandas xarray netCDF4 packaging geopandas \
                         build dvc make 'pytest>=6.0' \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
 
