Revert "Use endswith to pick up scheduled full tests on Wednesday"
This reverts commit 0bf561fd707da85aa7a1f4e4108cc2b1042f3b72.

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -135,7 +135,7 @@ jobs:
 
       # Run full tests including doctests on Wednesday
       - name: Run full tests
-        if: github.event_name == 'schedule' && endswith(github.event.schedule, '3')
+        if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * 3'
         run: make fulltest PYTEST_EXTRA="-r P"
 
       # Upload diff images on test failure
