--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -130,12 +130,12 @@ jobs:
 
       # Run the regular tests
       - name: Run tests
-        if: ${{ !endsWith(github.event.schedule, '3') }}
+        if: github.event.schedule != '0 0 * * 3'
         run: make test PYTEST_EXTRA="-r P"
 
       # Run full tests including doctests on Wednesday
       - name: Run full tests
-        if: github.event_name == 'schedule' && endsWith(github.event.schedule, '3')
+        if: github.event_name == 'schedule' && endswith(github.event.schedule, '3')
         run: make fulltest PYTEST_EXTRA="-r P"
 
       # Upload diff images on test failure
