Exclude an invalid link and timeout twitter links in the 'Check Links' workflow (#2289)

--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -37,6 +37,7 @@ jobs:
           --exclude "^https://zenodo.org/badge/DOI/10.5281/zenodo$"
           --exclude "^https://github.com/GenericMappingTools/pygmt/pull/[0-9]*$"
           --exclude "^https://github.com/GenericMappingTools/pygmt/issues/[0-9]*$"
+          --exclude "^https://github.com/GenericMappingTools/gmt/releases/tag/X.Y.Z$"
           --exclude "^git"
           --exclude "^file://"
           --exclude "^https://docs.generic-mapping-tools.org/latest/%s$"
@@ -46,6 +47,7 @@ jobs:
           --exclude "^https://doi.org"
           --exclude "^https://www.researchgate.net/project/"
           --exclude "^https://test.pypi.org/simple/"
+          --exclude "^https://twitter.com/"
           --verbose
           "repository/**/*.rst"
           "repository/**/*.md"
