--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,7 @@
 name: pygmt
 channels:
     - conda-forge
-    - defaults
+    - nodefaults
 dependencies:
     # Required dependencies
     - pip
@@ -13,10 +13,10 @@ dependencies:
     - packaging
     # Optional dependencies
     - geopandas
+    - ipython
     # Development dependencies (general)
     - build
     - dvc
-    - ipython
     - jupyter
     - make
     # Dev dependencies (style checks)
