--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,14 @@ readme = "README.rst"
 requires-python = ">=3.8"
 license = {text = "BSD License"}
 authors = [{name = "The PyGMT Developers", email = "pygmt.team@gmail.com"}]
-keywords = ["cartography", "geodesy", "geophysics", "geospatial", "oceanography", "seismology"]
+keywords = [
+    "cartography",
+    "geodesy",
+    "geophysics",
+    "geospatial",
+    "oceanography",
+    "seismology"
+]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
