--- a/.github/workflows/dvc-diff.yml
+++ b/.github/workflows/dvc-diff.yml
@@ -94,25 +94,6 @@ jobs:
         report="${report//$'\r'/'%0D'}"
         echo "report=$report" >> $GITHUB_OUTPUT
 
-    - name: Find comment with image diff report
-      uses: peter-evans/find-comment@v2.2.1
-      id: fc
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        comment-author: 'github-actions[bot]'
-        body-includes: 'This is an auto-generated report of images that have changed on the DVC remote'
-
     - name: Create comment with image diff report
-      if: steps.fc.outputs.comment-id == ''
-      uses: peter-evans/create-or-update-comment@v2.1.1
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        body: ${{ steps.image-diff.outputs.report }}
-
-    - name: Update comment with new image diff report
-      if: steps.fc.outputs.comment-id != ''
-      uses: peter-evans/create-or-update-comment@v2.1.1
-      with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
-        body: ${{ steps.image-diff.outputs.report }}
-        edit-mode: replace
+      run:
+        cml comment update report.md
