Add function to load raster tile maps using contextily (#2125)
New dataset function to load XYZ tiles! Uses contextily to retrieve
the tiles based on a bounding box. Included an example doctest
that shows how the map tiles can be loaded into an xarray.DataArray.
Added a new section in the API docs and intersphinx mappings for
contextily and xyzservices.

* Use correct Spherical Mercator coordinates

Can't assume that the input bounding box (which can be in longitude/latitude) is the same as the returned extent (which is always in EPSG:3857).

* Change ll parameter to lonlat

To fix pylint `C0103: Argument name "ll" doesn't conform to snake_case naming style (invalid-name)`.

* Add contextily to CI build matrix and include it as optional dependency

Let the Continuous Integration tests run with `contextily`, include it in pyproject.toml and environment.yml, and document it in `doc/install.rst` as an optional dependency.

* Set default bounding box coordinates to be lonlat

Bounding box coordinates are assumed to be longitude/latitude by default, rather than in Spherical Mercator.

* Skip doctest when contextily is not installed

Using the `__doctest_requires__` variable, see https://github.com/astropy/pytest-doctestplus/tree/v0.12.1#doctest-dependencies

* Add intersphinx link for rasterio

Also updated intersphinx link for xarray to new URL at https://docs.xarray.dev/en/stable

* Document wait and max_retries parameters used in contextily.bounds2img

* Use PyGMT's convention for default values in docstrings

Modified from original contextily.bounds2img docstring to fit PyGMT's standards. Xref https://github.com/Generi cMappingTools/pygmt/pull/1182.

* Rename load_map_tiles to load_tile_map

Also create new dedicated section for load_tile_map in the API docs index.

* Add zoom parameter and remove kwargs

Wrap all of the parameters in contextily.bounds2img, and so can remove kwargs. Need to disable the pylint recommendation `

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -47,7 +47,7 @@ jobs:
             optional-packages: ''
           - python-version: '3.11'
             numpy-version: '1.24'
-            optional-packages: 'geopandas ipython'
+            optional-packages: 'contextily geopandas ipython'
     timeout-minutes: 30
     defaults:
       run:
