--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         python-version: ['3.11']
         os: [ubuntu-22.04, macOS-12, windows-2022]
-        gmt_git_ref: [master]
+        gmt_git_ref: [redesign-allocmode]
     timeout-minutes: 30
     defaults:
       run:
