Specify Python version

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -80,6 +80,7 @@ jobs:
           environment-name: pygmt
           channels: conda-forge,nodefaults
           extra-specs: |
+            python=${{ matrix.python-version }}
             gmt=6.4.0
             numpy=${{ matrix.numpy-version }}
             pandas
