--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = [
     "geophysics",
     "geospatial",
     "oceanography",
-    "seismology"
+    "seismology",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -36,7 +36,7 @@ dependencies = [
     "pandas",
     "xarray",
     "netCDF4",
-    "packaging"
+    "packaging",
 ]
 dynamic = ["version"]
 
@@ -45,7 +45,7 @@ all = [
     "contextily",
     "geopandas",
     "ipython",
-    "rioxarray"
+    "rioxarray",
 ]
 
 [project.urls]
