Add note that workflow must be named publish-to-pypi
Co-Authored-By: Dongdong Tian <seisman.info@gmail.com>

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,4 +1,6 @@
 # Publish archives to PyPI and TestPyPI using GitHub Actions
+# Important: this workflow filename must be publish-to-pypi.yml to match the
+# settings in PyPI and TestPyPI so that OIDC publishing works
 
 name: Publish to PyPI
 
