--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -29,6 +29,7 @@ jobs:
       id: lychee
       uses: lycheeverse/lychee-action@v1.6.1
       with:
+        debug: true
         # 429: Too many requests
         args: >
           --accept 429
