--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -68,7 +68,7 @@ jobs:
           mamba install gmt=${{ matrix.gmt_version }} numpy \
                         pandas xarray netCDF4 packaging \
                         contextily geopandas ipython rioxarray \
-                        build dvc 'funcy<2.0' make 'pytest>=6.0' \
+                        build dvc 'funcy=1.18' make 'pytest>=6.0' \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
 
       # Show installed pkg information for postmortem diagnostic
