--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -62,12 +62,13 @@ jobs:
           use-mamba: true
 
       # Install GMT and other required dependencies from conda-forge
+      # TODO: Remove funcy pin after next DVC release
       - name: Install dependencies
         run: |
           mamba install gmt=${{ matrix.gmt_version }} numpy \
                         pandas xarray netCDF4 packaging \
                         contextily geopandas ipython rioxarray \
-                        build dvc make 'pytest>=6.0' \
+                        build dvc 'funcy=1.18' make 'pytest>=6.0' \
                         pytest-cov pytest-doctestplus pytest-mpl sphinx-gallery
 
       # Show installed pkg information for postmortem diagnostic
