--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -94,7 +94,6 @@ jobs:
           use-mamba: true
 
       # Install dependencies from conda-forge
-      # TODO: Remove funcy pin after next DVC release
       - name: Install dependencies
         run: |
           mamba install python=${{ matrix.python-version }} \
@@ -102,7 +101,7 @@ jobs:
                         geopandas ghostscript libnetcdf hdf5 zlib curl pcre make
           pip install --pre --prefer-binary \
                         numpy pandas xarray netCDF4 packaging \
-                        build contextily dvc 'funcy=1.18' ipython rioxarray \
+                        build contextily dvc ipython rioxarray \
                         'pytest>=6.0' pytest-cov pytest-doctestplus pytest-mpl \
                         sphinx-gallery
 
