Use 'python -m pip install' instead of 'pip install'

--- a/.github/workflows/ci_tests_dev.yaml
+++ b/.github/workflows/ci_tests_dev.yaml
@@ -99,7 +99,7 @@ jobs:
           mamba install python=${{ matrix.python-version }} \
                         ninja cmake libblas libcblas liblapack fftw libgdal \
                         geopandas ghostscript libnetcdf hdf5 zlib curl pcre make
-          pip install --pre --prefer-binary \
+          python -m pip install --pre --prefer-binary \
                         numpy pandas xarray netCDF4 packaging \
                         build contextily dvc ipython rioxarray \
                         'pytest>=6.0' pytest-cov pytest-doctestplus pytest-mpl \
