Specify Python version in cache_data workflow

--- a/.github/workflows/cache_data.yaml
+++ b/.github/workflows/cache_data.yaml
@@ -29,6 +29,7 @@ jobs:
         with:
           environment-name: pygmt
           extra-specs: |
+            python=3.11
             gmt=6.4.0
             numpy
             pandas
