--- a/.github/workflows/ci_tests_legacy.yaml
+++ b/.github/workflows/ci_tests_legacy.yaml
@@ -1,5 +1,11 @@
-# This workflow installs PyGMT and runs tests with old GMT versions
-
+# Tests PyGMT with GMT legacy versions on Linux/macOS/Windows
+#
+# This workflow runs regular PyGMT tests with GMT legacy versions. Due to the
+# minor baseline image changes between GMT versions, the workflow only runs
+# the tests but doesn't do image comparisons.
+#
+# It is scheduled to run every Tuesday on the main branch.
+#
 name: GMT Legacy Tests
 
 on:
