--- a/.github/workflows/release-baseline-images.yml
+++ b/.github/workflows/release-baseline-images.yml
@@ -1,5 +1,8 @@
 # Upload the ZIP archive of baseline images as a release asset
-
+#
+# This workflow is run to upload the ZIP archive of baseline images as a
+# release asset when a release is published.
+#
 name: Upload baseline images
 
 # Only run for releases
