--- a/.github/workflows/cache_data.yaml
+++ b/.github/workflows/cache_data.yaml
@@ -1,4 +1,4 @@
-# Cache GMT remote data files and uplodas as artifacts
+# Cache GMT remote data files and uploads as artifacts
 #
 # This workflow downloads data files needed by PyGMT tests/documentation from
 # the GMT data server and uploads as workflow artifacts which can be accessed
