Specify gmt version in workflow files

--- a/.github/workflows/ci_tests.yaml
+++ b/.github/workflows/ci_tests.yaml
@@ -83,6 +83,7 @@ jobs:
           extra-specs: |
             python=${{ matrix.python-version }}
             numpy=${{ matrix.numpy-version }}
+            gmt=6.4.0
 
       # Show installed pkg information for postmortem diagnostic
       - name: List installed packages
