--- a/ci/requirements/tests_with_optional_dependencies.yml
+++ b/ci/requirements/tests_with_optional_dependencies.yml
@@ -4,7 +4,7 @@ channels:
     - nodefaults
 dependencies:
     # Required dependencies
-    - gmt=6.4.0
+    - gmt
     - numpy>=1.21
     - pandas
     - xarray
